Se pueden listar y borrar recomendaciones y visualizaciones. Además, se gestionan automática al crear o modificar un perfil
Os invito a revisar los cambios leyendo el código porque hay conexiones muy profundas
